--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix",
-    "format": "prettier --write \"src/**/*.{js,css,html}\" --config .prettierrc"
+    "format": "prettier --write \"src/**/*.{js,css,scss,html}\" --config .prettierrc"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
+    "sass": "^1.97.1",
     "vite": "^7.3.0"
   },
   "dependencies": {
