--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vite": "^7.3.0"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/poppins": "^5.2.7",
     "bootstrap-icons": "^1.13.1"
   }
 }
